GRpc fixed